# workmode-public

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  SECURITY.md  release-manifest.example.json  start-workmode-public.cmd  stop-workmode-public.cmd
.github/workflows/: release-windows.yml
backend/: requirements.txt
backend/app/: __init__.py  chat_runs.py  config.py  context_imports.py  context_window.py  endnote_import.py  files.py  history_repair.py  literature_pipeline.py  literature_project.py  literature_routes.py  llm.py  (+12 more)
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backend.rs  diagnostics.rs  lib.rs  main.rs  migration.rs  paths.rs
desktop/src-tauri/tests/: desktop_contract.rs  diagnostics.rs
docs/: ARCHITECTURE.md  ARTICLE-PROCESSING.md  CUSTOM-SKINS.md  DESKTOP-DISTRIBUTION.md  DEVELOPMENT.md  PRODUCT-ROADMAP.md  SKIN-LAB-MATRIX.md  SKIN-REGRESSION.md  SPECIALIZED-MODULES.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
literature-demo/: ARCHITECTURE.md  README.md
local-reference/: README.md
scripts/: build-desktop.ps1  build-release.ps1  build-skin-library.ps1  official-skin.mjs  one-click-start.ps1  start-backend.ps1  start-frontend.ps1  stop-workmode-public.ps1  sync-version.ps1
skin-library/: README.md  verify.local.test.ts
tutorial-project/: INSTRUCTIONS.md  README.md  START_HERE.md  TUTORIAL_AI_GUIDE.md  WORKMODE.md  WORKMODE_TUTORIAL.json
(+254 files in other folders)
