[package]
name = "workmode-public"
version = "0.3.2"
description = "Local-first research work assistant"
authors = ["Jason Yang"]
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
repository = "https://github.com/carbocation123/workmode-public"

[lib]
name = "workmode_public_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
